<resources>
    <string name="app_name">YouLog</string>
    <string name="timeline">时间线</string>
    <string name="mini_view">迷你视图</string>
    <string name="camera">拍照</string>
    <string name="photo_library">相册导入</string>
    <string name="add_image">添加图片</string>
    <string name="share">分享导入</string>
    <string name="image_detail">图片详情</string>
    <string name="notes">笔记</string>
    <string name="tags">标签</string>
    <string name="date_filter">日期筛选</string>
    <string name="bulk_delete">批量删除</string>
    <string name="add_note">添加笔记</string>
    <string name="edit_note">编辑笔记</string>
    <string name="add_tag">添加标签</string>
    <string name="delete">删除</string>
    <string name="share_image">分享图片</string>
    <string name="copy_note">复制笔记</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="select_all">全选</string>
    <string name="deselect_all">取消全选</string>
    <string name="no_images">暂无图片</string>
    <string name="empty_guide">点击下方按钮添加图片记录</string>
    <string name="camera_permission_required">需要相机权限才能拍照</string>
    <string name="storage_permission_required">需要存储权限才能导入图片</string>
    <string name="delete_confirm">确定要删除这张图片吗？</string>
    <string name="delete_multiple_confirm">确定要删除选中的 %d 张图片吗？</string>
    <string name="compression">压缩</string>
    <string name="auto_delete_after_import">导入后删除原图</string>
    <string name="clear">清空</string>
    <string name="note_saved">已保存</string>
    <string name="note_copied">笔记已复制</string>
</resources>

