<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_edit_note"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/edit_note"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_edit_tags"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/add_tag"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/share_image"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
</menu>

